<resources>
    <string name="app_name">pass-a-sketch</string>
    <string name="join_game">join game</string>
    <string name="enter_room_code">enter room code:</string>
    <string name="room_code">room code</string>
    <string name="pick_teams">pick teams</string>
    <string name="room_code_abcde">room code: abcde</string>
    <string name="name1">name1</string>
    <string name="name2">name2</string>
    <string name="pass_a_sketch">pass-a-sketch</string>
    <string name="create_room">create room</string>
    <string name="join_room">join room</string>
    <string name="name">name</string>
    <string name="choose_teams">choose teams</string>
    <string name="orange">orange</string>
    <string name="blue">blue</string>
    <string name="name3">name1</string>
    <string name="name4">name3</string>
    <string name="name5">name2</string>
    <string name="name6">name4</string>
    <string name="start_game">start game!</string>
    <string name="draw_the_prompt">draw the prompt</string>
    <string name="prompt_rhino">prompt: rhino</string>
    <string name="_10">10</string>
    <string name="draw_what_you_saw">draw what you saw</string>
    <string name="the_last_person_drew_this">this is what the last person drew:</string>
    <string name="guess">guess</string>
</resources>